--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@chrisoakman/chessboardjs": "^1.0.0",
     "kokopu": "^4.8.0",
-    "o1js": "0.*"
+    "o1js": "0.*",
+    "svelte-chess": "^0.11.1"
   }
 }
