--- a/ui/package.json
+++ b/ui/package.json
@@ -40,8 +40,11 @@
 	},
 	"dependencies": {
 		"o1js": "0.*",
+		"sass": "^1.69.5",
+		"scss": "^0.2.4",
 		"svelte-chess": "^0.11.1",
 		"svelte-french-toast": "^1.2.0",
+		"svelte-icons-pack": "^2.1.0",
 		"zkchess-contracts": "^0.1.0"
 	}
 }
