--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
 	},
 	"dependencies": {
 		"o1js": "0.*",
+		"peerjs": "^1.5.2",
 		"sass": "^1.69.5",
 		"scss": "^0.2.4",
 		"svelte-chess": "^0.11.1",
