--- a/ui/package.json
+++ b/ui/package.json
@@ -46,7 +46,6 @@
 		"svelte-chess": "^0.11.1",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-icons-pack": "^2.1.0",
-		"tailwindcss-text-balance": "^0.0.7",
-		"zkchess-contracts": "^0.1.0"
+		"tailwindcss-text-balance": "^0.0.7"
 	}
 }
