--- a/ui/package.json
+++ b/ui/package.json
@@ -2,7 +2,7 @@
 	"name": "zkchess-ui",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -47,8 +47,9 @@
 		"sass": "^1.70.0",
 		"scss": "^0.2.4",
 		"svelte-french-toast": "^1.2.0",
-		"svelte-icons-pack": "^2.1.0",
+		"svelte-icons-pack": "^3.1.3",
 		"svelte-ripple-action": "^1.0.5",
+		"tailwind-merge": "^2.2.2",
 		"tailwindcss-text-balance": "^0.0.7"
 	}
 }
