--- a/contracts/package.json
+++ b/contracts/package.json
@@ -44,7 +44,7 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.7.2"
   },
-  "peerDependencies": {
-    "o1js": "^0.16.2"
+  "dependencies": {
+    "o1js": "^0.17.0"
   }
 }
