--- a/matchmaker/package.json
+++ b/matchmaker/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p ./"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
@@ -15,6 +16,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
