--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
 		"svelte": "^4.0.5"
 	},
 	"dependencies": {
+		"@aurowallet/mina-provider": "^1.0.2",
 		"chess.js": "^1.0.0-beta.7",
 		"chessground": "^9.0.4",
 		"comlink": "^4.4.1",
@@ -50,7 +51,6 @@
 		"svelte-icons-pack": "^3.1.3",
 		"svelte-ripple-action": "^1.0.5",
 		"tailwind-merge": "^2.2.2",
-		"tailwindcss-text-balance": "^0.0.7",
-		"zkchess-interactive": "^0.1.2"
+		"tailwindcss-text-balance": "^0.0.7"
 	}
 }
