--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
 		"peerjs": "^1.5.2",
 		"sass": "^1.70.0",
 		"scss": "^0.2.4",
+		"socket.io-client": "^4.7.5",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-icons-pack": "^3.1.3",
 		"svelte-ripple-action": "^1.0.5",
