--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -4,6 +4,14 @@
 			"source": "/(.*)",
 			"headers": [
 				{
+					"key": "Access-Control-Allow-Origin",
+					"value": "*"
+				},
+				{
+					"key": "Cross-Origin-Resource-Policy",
+					"value": "cross-origin"
+				},
+				{
 					"key": "Cross-Origin-Opener-Policy",
 					"value": "same-origin"
 				},
