--- a/contracts/package.json
+++ b/contracts/package.json
@@ -14,6 +14,8 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
+    "deployTest": "npm run build && node build/src/Deploy/DeployTest.js",
+    "deploy": "npm run build && node build/src/Deploy/Deploy.js",
     "build": "tsc",
     "buildw": "tsc --watch",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
@@ -35,6 +37,7 @@
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.7.0",
     "eslint-plugin-o1js": "^0.4.0",
     "husky": "^7.0.1",
@@ -45,6 +48,6 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "o1js": "^1.3.0"
+    "o1js": "1.1.0"
   }
 }
