testing zkAppWorker with zkapp on devnet

--- a/contracts/.env
+++ b/contracts/.env
@@ -7,3 +7,4 @@ BLACK_PLAYER_PRIVATE_KEY=EKEMbyDcapyQquKSyveb4XeeTjBnjKwkXopAG4BHXUMef3B1Qrqy
 # pubKEY B62qqQpm4LoobRMXMFf6S5tVPNPxPFBXmrRtBzkpaQwqLyWouBGYY3Y
 
 ZK_APP_PRIVATE_KEY=EKEJ8eyVJdMXcty91NKzi9TmMm1LPXLT8hQpqw9vCVKFmKynF6R3
+#pubKEY B62qkeMyPbYuwfwXkhwMXYLvphQLrgfKUcvkEhuMD1PYdcRyDsxDvuf
