--- a/ui/package.json
+++ b/ui/package.json
@@ -53,7 +53,6 @@
 		"svelte-icons-pack": "^3.1.3",
 		"svelte-ripple-action": "^1.0.5",
 		"tailwind-merge": "^2.2.2",
-		"tailwindcss-text-balance": "^0.0.7",
-		"zkchess-interactive": "^0.1.4"
+		"tailwindcss-text-balance": "^0.0.7"
 	}
 }
